--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
   <string name="app_name">MVP Demo</string>
-  <string name="hello_world">Hello World!</string>
+  <string name="hello">Hello!</string>
   <string name="welcome">Welcome!</string>
   <string name="welcome_back">Welcome back!</string>
 </resources>
